# JniCmake

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sus/jnicmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-algorithm.cpp  native-foundation.cpp  native-image.cpp  native-lib.cpp  native-log.cpp
app/src/main/java/com/sus/jnicmake/: MainActivity.java
app/src/main/java/com/sus/jnicmake/jni/: JniAlgorithm.java  JniFoundation.java  JniImage.java  JniManager.java  SuperJniFoundation.java
app/src/main/java/com/sus/jnicmake/model/: Person.java
app/src/main/java/com/sus/jnicmake/utils/handler/: CommonHandler.java  IHandlerMessage.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/sus/jnicmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
